--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.dom.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.sound.js"></script>
     <script type="text/javascript" src="sketch.js"></script>
-
-    <style>
-      body {
-        justify-content: center;
-        align-content: center;
-        padding: 20px;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
   </body>
